8255239: The timezone of the hs_err_pid log file is corrupted in Japanese locale

Reviewed-by: andrew
Backport-of: b46d73bee808af7891b699df30a5a6dec3f5139f